2004-03-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: use ${libdir} for PLUGINS_DIR since on 64bit
          it contains lib64; use AS_AC_EXPAND to handle it properly

2004-03-05  David Schleef  <ds@schleef.org>

	* gst/gstcpuid_i386.s:  Remove unused code
	* libs/gst/getbits/getbits.c: (gst_getbits_init),
	(gst_getbits_newbuf): Remove MMX code
	* libs/gst/getbits/getbits.h: Remove MMX code

2004-03-04  David I. Lehn  <dlehn@users.sourceforge.net>

	* debian/.cvsignore:
	* debian/README.Debian:
	* debian/changelog:
	* debian/control:
	* debian/control.in:
	* debian/copyright:
	* debian/gstreamer-core-libs-dev.files:
	* debian/gstreamer-core-libs.files:
	* debian/gstreamer-core.files:
	* debian/gstreamer-core.postinst:
	* debian/gstreamer-core.postrm:
	* debian/gstreamer-doc.files:
	* debian/gstreamer-doc.links:
	* debian/gstreamer-doc.lintian:
	* debian/gstreamer-runtime.files:
	* debian/gstreamer-runtime.manpages:
	* debian/gstreamer-runtime.postinst:
	* debian/gstreamer-runtime.postrm:
	* debian/gstreamer-tools.files:
	* debian/gstreamer-tools.manpages:
	* debian/libgstreamer-dev.files:
	* debian/libgstreamer0.4.1.files:
	* debian/libgstreamerVERSION.files:
	* debian/rules:
	Debian package info not maintained here.

2004-03-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/elements/gstmultifilesrc.c: (gst_multifilesrc_class_init):
	* gst/gstbin.c: (gst_bin_class_init):
	* gst/gstelement.c: (gst_element_class_init):
	* gst/gstindex.c: (gst_index_class_init):
	* gst/gstobject.c: (gst_object_class_init),
	(gst_signal_object_class_init):
	* gst/gstpad.c: (gst_pad_template_class_init):
	* gst/gstregistry.c: (gst_registry_class_init):
	* gst/gsturi.c: (gst_uri_handler_base_init):
	* gst/gstxml.c: (gst_xml_class_init):
	* libs/gst/control/dparam.c: (gst_dparam_class_init):
	* libs/gst/control/dparammanager.c: (gst_dpman_class_init):
          make all signal names use dashes instead of underscore
